@@ -308,3 +308,9 @@ Wed Jan 18 16:10:27 2012                        Michael Jennings (mej)
 Rearrange order of prop() parameters to remove need for conditional.
 See updated examples in unit tests.
 ----------------------------------------------------------------------
+Wed Jan 18 16:37:49 2012                        Michael Jennings (mej)
+
+Too fancy.  Keep the simple cases simple.  Only accept a single
+scalar.  Anything more complex (e.g., arrays) can be done using a
+custom validator and the existing smart handling of arrays in set().
+----------------------------------------------------------------------
